--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,7 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/lodash/dist/lodash.compat.js"></script>
     <script src="bower_components/angular-loading-bar/src/loading-bar.js"></script>
+    <script src="bower_components/ngstorage/ngStorage.js"></script>
     <!-- endbower -->
     <script src="bower_components/marked/lib/marked.js"></script>
     <!-- endbuild -->
