--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js">
+<html class="no-js" manifest="manifest.appcache">
   <head>
     <meta charset="utf-8">
     <title>Hoodie - Frequently Asked Questions</title>
