feat: small design improvements

--- a/app/index.html
+++ b/app/index.html
@@ -65,8 +65,10 @@
       </header>
       <ui-view></ui-view>
       <footer>
-        <a href="https://github.com/hoodiehq/faq/issues/new">Ask a question</a>
-        <a href="http://thehoodiefirm.com/impressum.html">Impressum</a>
+        <div class="inner">
+          <a href="https://github.com/hoodiehq/faq/issues/new">Ask a question</a>
+          <a href="http://thehoodiefirm.com/impressum.html">Impressum</a>
+        </div>
       </footer>
     </main>
     <!-- build:js(.) scripts/oldieshim.js -->
