fix(images): change img to images path to follow gruntfile convention

--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
     <main>
       <header>
         <section id="nav">
-          <div id="logo"><img src="../img/logo.svg" width="135" alt=""></div>
+          <div id="logo"><img src="images/logo.svg" width="135" alt=""></div>
           <nav id="main-nav" aria-role="navigation">
             <a href="#" class="active">Intro</a>
             <a href="#">Contribute</a>
