add links to navigation

--- a/app/index.html
+++ b/app/index.html
@@ -39,29 +39,27 @@
     <main>
       <header>
         <section id="nav">
-          <div id="logo"><img src="images/logo.svg" width="135" alt=""></div>
+          <div id="logo"><a href="http://hood.ie"><img src="images/logo.svg" width="135" alt="The Hoodie Logo takes you to Hoodie's Website"></a></div>
           <nav id="main-nav" aria-role="navigation">
-            <a href="#" class="active">Intro</a>
-            <a href="#">Contribute</a>
-            <a href="#">Get help</a>
-            <a href="#">about</a>
-            <a href="#">community</a>
-            <a href="#">zoo</a>
-            <a href="#">contact</a>
+            <a href="http://hood.ie/intro" class="active">Intro</a>
+            <a href="http://hood.ie/contribute">Contribute</a>
+            <a href="http://hood.ie/get-help">Get help</a>
+            <a href="http://hood.ie/about">About</a>
+            <a href="http://hood.ie/community">Community</a>
+            <a href="http://hood.ie/animals">Animals</a>
+            <a href="http://hood.ie/contact">Contact</a>
           </nav>
           <ul id="meta-nav">
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Docs</a></li>
-            <li><a href="#">try</a></li>
-            <li><a href="#">FAQ</a></li>
+            <li><a href="http://hood.ie/blog">Blog</a></li>
+            <li><a href="http://faq.hood.ie">FAQ</a></li>
           </ul>
         </section>
-        <section class="hide">
+        <section class="hid">
           <ul id="sub-nav">
-            <li><a href="#">Team</a></li>
-            <li><a href="#">wear hoodie</a></li>
-            <li><a href="#">give money</a></li>
-            <li><a href="#" class="active">hire us</a></li>
+            <li><a href="http://hood.ie/intro#get-started">Get started</a></li>
+            <li><a href="http://hood.ie/intro#showcases">Apps & Showcases</a></li>
+            <li><a href="http://hood.ie/bug">Report a bug</a></li>
+            <li><a href="http://hood.ie/initiatives">Initiatives</a></li>
             <li><a href="#">contributors</a></li>
             <li><a href="#">friends</a></li>
             <li><a href="#">initiatives</a></li>
