testing fix for missing files

--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@ and we’d love to have you on board: http://hood.ie/contribute
     <meta name="msapplication-config" content="/favicons/browserconfig.xml">
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
-
+    <link rel="stylesheet" href="bower_components/normalize.css/normalize.css" />
     <link rel="stylesheet" href="bower_components/angular-loading-bar/src/loading-bar.css" />
     <!-- endbower -->
     <!-- endbuild -->
