fix navigation links, thanks to @franatique for noticing

--- a/app/index.html
+++ b/app/index.html
@@ -75,25 +75,25 @@ and we’d love to have you on board: http://hood.ie/contribute
         <section>
             <ul class="sub-nav">
                 <li class="sub-nav-list-item">
-                    <a href="/en/">Hoodieverse</a>
+                    <a href="http://docs.hood.ie/en/">Hoodieverse</a>
                 </li>
                 <li class="sub-nav-list-item">
-                    <a href="/en/start">Let's start</a>
+                    <a href="http://docs.hood.ie/en/start">Let's start</a>
                 </li>
                 <li class="sub-nav-list-item">
-                    <a href="/en/tutorials">Tutorials</a>
+                    <a href="http://docs.hood.ie/en/tutorials">Tutorials</a>
                 </li>
                 <li class="sub-nav-list-item">
-                    <a href="/en/techdocs">API</a>
+                    <a href="http://docs.hood.ie/en/techdocs">API</a>
                 </li>
                 <li class="sub-nav-list-item">
-                    <a href="/en/plugins">Plugins</a>
+                    <a href="http://docs.hood.ie/en/plugins">Plugins</a>
                 </li>
                 <li class="sub-nav-list-item">
-                    <a href="/en/deployment">Deployment</a>
+                    <a href="http://docs.hood.ie/en/deployment">Deployment</a>
                 </li>
                 <li class="sub-nav-list-item">
-                    <a href="/en/community">Community</a>
+                    <a href="http://docs.hood.ie/en/community">Community</a>
                 </li>
             </ul>
         </section>
