--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,7 @@ and we’d love to have you on board: http://hood.ie/contribute
     <![endif]-->
       <header role="banner">
         <section class="nav">
-            <a href="http://hood.ie" class="logo"><img src="images/logo.svg" width="135" alt=""></a>
+            <a href="http://hood.ie" class="logo"><img src="images/logo.svg" width="135" alt=""><b>Hoodie</b></a>
             <nav class="main-nav">
                 <a href="http://hood.ie/intro">Intro</a>
                 <a href="http://hood.ie/contribute">Contribute</a>
