--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@ and we’d love to have you on board: http://hood.ie/contribute
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-      <header>
+      <header role="banner">
         <section class="nav">
             <a href="http://hood.ie" class="logo"><img src="images/logo.svg" width="135" alt=""></a>
             <nav class="main-nav">
@@ -101,7 +101,7 @@ and we’d love to have you on board: http://hood.ie/contribute
 
     <ui-view></ui-view>
 
-    <footer>
+    <footer role="contentinfo">
       <div class="footer">
        <section class="cb sitemap">
         <ul class="sitemap-list l">
