feat(noscript): add noscript link to GH issues

--- a/app/index.html
+++ b/app/index.html
@@ -99,6 +99,14 @@ and we’d love to have you on board: http://hood.ie/contribute
         </section>
     </header>
 
+    <noscript>
+      <div class="content">
+        <h2>
+          <a href="https://github.com/hoodiehq/faq/issues?utf8=%E2%9C%93&q=is%3Aclosed+label%3Aanswered+">Check out the Hoodie FAQs on Github!</a>
+        </h2>
+      </div>
+    </noscript>
+
     <ui-view></ui-view>
 
     <footer>
