fix: add href to DOCS in menu

--- a/app/index.html
+++ b/app/index.html
@@ -64,9 +64,9 @@ and we’d love to have you on board: http://hood.ie/contribute
             </nav>
             <ul class="meta-nav">
                 <li class="meta-nav-list-item"><a href="http://hood.ie/blog/" target="_blank">Blog</a></li>
-                <li class="meta-nav-list-item"><a href="/" class="">Docs</a></li>
+                <li class="meta-nav-list-item"><a href="http://docs.hood.ie" target="_blank">Docs</a></li>
                 <!-- <li><a href="#">try</a></li> -->
-                <li class="meta-nav-list-item"><a href="http://faq.hood.ie" target="_blank">FAQ</a></li>
+                <li class="meta-nav-list-item"><a href="/" class="active">FAQ</a></li>
             </ul>
             <a href="#" class="menu-button">
                 <span class="menu-button-span"></span>
